2014-09-08  Trevor Saunders  <tsaunders@mozilla.com>

	* common/config/picochip/picochip-common.c: Remove.
	* config.gcc: Remove support for picochip.
	* config/picochip/constraints.md: Remove.
	* config/picochip/dfa_space.md: Remove.
	* config/picochip/dfa_speed.md: Remove.
	* config/picochip/picochip-protos.h: Remove.
	* config/picochip/picochip.c: Remove.
	* config/picochip/picochip.h: Remove.
	* config/picochip/picochip.md: Remove.
	* config/picochip/picochip.opt: Remove.
	* config/picochip/predicates.md: Remove.
	* config/picochip/t-picochip: Remove.
	* doc/md.texi: Don't document picochi.

2014-09-08  David Malcolm  <dmalcolm@redhat.com>

	* basic-block.h (control_flow_insn_p): Strengthen param from
	const_rtx to const rtx_insn *.
	* cfgbuild.c (control_flow_insn_p): Likewise.

2014-09-08  David Malcolm  <dmalcolm@redhat.com>

	* gcse.c (modify_mem_list): Strengthen this variable from
	vec<rtx> * to vec<rtx_insn *> *.
	(vec_rtx_heap): Strengthen this typedef from vec<rtx> to
	vec<rtx_insn *>.
	(load_killed_in_block_p): Strengthen local "list" from vec<rtx> to
	vec<rtx_insn *>, and local "setter" from rtx to rtx_insn *.
	(record_last_mem_set_info): Strengthen param "insn" from rtx to
	rtx_insn *.
	(record_last_set_info): Likewise for local "last_set_insn".

2014-09-08  DJ Delorie  <dj@redhat.com>

	* doc/invoke.texi (MSP430 Options): Add -minrt.

2014-09-08  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* config/rs6000/rs6000.c (special_handling_values):  Add SH_SPLAT.
	(rtx_is_swappable_p): Convert UNSPEC cascading ||s to a switch
	statement; allow optimization of UNSPEC_VSPLT_DIRECT with special
	handling SH_SPLAT.
	(adjust_extract): Fix test for VEC_DUPLICATE case; fix adjustment
	of extracted lane.
	(adjust_splat): New function.
	(handle_special_swappables): Call adjust_splat for SH_SPLAT.
	(dump_swap_insn_table): Add case for SH_SPLAT.

2014-09-08  Richard Biener  <rguenther@suse.de>

	PR ipa/63196